testfx/errors/error_tests/edge_27_generator.fx
// 生成器语法
function* generator() {
    yield 1
    yield 2
    yield 3
}

gen := generator()
